--- a/mentionslegales.css
+++ b/mentionslegales.css
@@ -35,6 +35,9 @@ div{
     margin-inline: auto;
     background-image: url(img/img-noise-2000x728-white.png);
     padding: 15px;
+    max-width: 1200px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 
 }
 
@@ -52,4 +55,12 @@ h1{
 .nb{
     font-weight: bold;
     color: var(--background-red);
+}
+
+
+.return{
+    color: var(--text-color);
+    border-radius: 50px;
+    padding: 15px;
+    font-weight: bold;
 }
